Fixes for bug 486410 - AS debugging (r=stejohns/edwsmith)

A number of fixes were needed to get the AS debugger
back in shape.

(1) In CodegenLIR, a call to localSet() needed to use 'loc' not 'i'

(2) StackTrace.scopeBase() disabled until bug 484039
    is fixed

(3) In MethodEnv:debugEnter() frameTraits should not
    be cleared out.

(4) Added DebuggerCheck filter for debug debugger
    builds to verifier that the LIR being generated for
    traits is correct.   It operates by tracking stores to
    'vars' and 'varTraits' and then ensuring that they
    are consistent each time a debugline is
    encountered (which corresponds to a possible
    point a which the debugger may halt).

(5) LIR_live was was extending the lifetime of
    expressions until the end of loops.  This is
    sufficient for some expressions, but for alloca's
    the expectation was that the lifetime should be
    extended for the entire compilation unit (method
    in our case).